# VariousContent

./: .gitattributes  .gitignore  LICENSE  README.md
2022_Automotive_Qt/: .gitignore
2022_Automotive_Qt/documentation/: backlog.ods  koodikommentit.txt  laskelmia.ods  projektisuunnitelma.odt
2022_Automotive_Qt/source/: README.md
2022_Automotive_Qt/source/QuickApp/: BatteryLevel.qml  CMakeLists.txt  ControlWindow.qml  SignalPane.qml  SpeedGauge.qml  Throttle.qml  car.cpp  car.h  main.cpp  main.qml  odometer.cpp  odometer.h  powerindicator.cpp  powerindicator.h
2022_Automotive_Qt/source/RemoteObjects/Source/: CMakeLists.txt  car.cpp  car.h  controller.cpp  controller.h  main.cpp  main.qml
C++-kielen_perusteet_2005-2006/: README.md
C++-kielen_perusteet_2005-2006/DiseaseSimulation/: Creature.cpp  Creature.h  Direction.cpp  Direction.h  Human.cpp  Human.h  Makefile  Population.cpp  Population.h  Position.cpp  Position.h  Randomizer.cpp  Randomizer.h  Simulator.cpp  Simulator.h  SimulatorHumanFactory.cpp  SimulatorHumanFactory.h  Vaccine.cpp  Vaccine.h  Virus.cpp  Virus.h  main.cpp
C++_perusteet_2008/: .gitignore  Board.cpp  Board.h  Graph.cpp  Graph.h  KingsPathApp.cpp  KingsPathApp.h  Makefile  Node.cpp  Node.h  README.md  main.cpp  run-scanbuild.sh
C++_perusteet_2008/Clang_Windows/: README.md  build_x64_release.bat
C++_perusteet_2008/KingsPath_EclipseCDT_Windows/: .cproject  .project  README.md  build_x64_debug.bat  build_x64_release.bat
C++_perusteet_2008/MSYS2/: README.md  build_debug.bat  build_release.bat
C++_perusteet_2008/VStudio_2019/: KingsPath.sln  README.md
C++_perusteet_2008/original/: Board.cpp  Board.h  Graph.cpp  Graph.h  KingsPathApp.cpp  KingsPathApp.h  Node.cpp  Node.h  README.md  main.cpp
codelite/: first.workspace  test1.project
codelite/test1/: Makefile  test1.cpp  test1.h
file_read/: FileRead.java  JavaFileRead.java  Makefile  README.md  file_read.R  file_read.py  file_read_c.c  file_read_cxx.cpp  file_read_shell.sh  run.sh
kielet/saksa/: README.md  jarjestyslukuja.txt  uhrzeit.html  verbeja.txt
lukusana/: Makefile  README.md  linking_test.sh  ls_input.c  ls_input.h  ls_presentation.c  ls_presentation.h  ls_stack.c  ls_stack.h  lukusana-c.project  lukusana-cxx.project  lukusana.c  lukusana.workspace  lukusana_main.c  run-scanbuild.sh  run_api_tests.sh  run_coverage.sh  run_linking_test.sh
symbolinen_konekieli/: README.md  _ali1.asm  dec2hex.asm  etsi.asm  etsinimi.asm  hex2dec.asm  iy01.asm  iy03.asm  koe1.asm  koeali1.asm  koepaa1.asm  laske.asm  lueasc.asm  luekesk.asm  makrot.txt  malli.asm  palv54.asm  printa.asm  struc.asm  summaa2.asm  teht16.asm  teht22.asm  teht23.asm  teht32.asm  teht41.asm  teht52.asm  teht54.asm  tulnimi.asm  tulot.asm  tuplaa.asm  vrtjono.asm
veikkauspelit/: tuuripelit.py
(+174 files in other folders)
